[package]
name = "yewchat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "=0.2.92"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.2", optional = true }
log = "0.4.6"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16"
reqwasm = "0.4"
web-sys = "0.3.55"
futures = "0.3.17"
wasm-bindgen-futures = "=0.4.42"
serde_json = "1.0.73"
serde = {version = "1.0", features=["derive"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false